--- a/eCommerce.OrderApiSolution/OrderApi.Presentation/appsettings.json
+++ b/eCommerce.OrderApiSolution/OrderApi.Presentation/appsettings.json
@@ -1,9 +1,20 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "eCommerceConnection": "Server=DESKTOP-K00L6IP\\SQLEXPRESS; Database=ECommerceDb; Trusted_Connection=true; TrustServerCertificate=true;"
+    },
+    "MySerilog": {
+        "FileName": "OrderApi"
+    },
+    "Authentication": {
+        "Key": "qa12ed35Tgh67GjasYG23LasFAsdafzxASHJKcvb",
+        "Isuuer": "https://localhost:5000",
+        "Audience": "https://localhost:5000"
     }
-  },
-  "AllowedHosts": "*"
 }
