--- a/eCommerce.OrderApiSolution/OrderApi.Presentation/appsettings.json
+++ b/eCommerce.OrderApiSolution/OrderApi.Presentation/appsettings.json
@@ -16,5 +16,8 @@
         "Key": "qa12ed35Tgh67GjasYG23LasFAsdafzxASHJKcvb",
         "Isuuer": "https://localhost:5000",
         "Audience": "https://localhost:5000"
+    },
+    "ApiGateway": {
+        "BaseAddress": "https://localhost:5001"
     }
 }
